--- a/public/styles.css
+++ b/public/styles.css
@@ -1,11 +1,15 @@
 body { 
   margin: 0px; 
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+   
+  font-family: aller,sans-serif;
+font-weight: 400;
+font-style: normal;
+  
 }
 
 /* both maps are full screen. */
 #storyMap, #pickerMap {
-  height: 100vh;
+  height: 100%;
   width: 100vw;
 }
 
@@ -70,22 +74,25 @@ section#create{
   overflow: hidden;
 }
 #createForm  .speechBubble .tail{
-  position: relative;
-  background: white; 
-  width: 100%; 
-  height: 100%;
-  transform: rotate(-30deg); 
-  top: -50%;
-  left: 10%;
+ position: relative;
+  background: white;
+  width: 4rem;
+  height: 4rem;
+  transform: rotate(-45deg);
+  top: calc(50% - 2rem);
+  left: 1rem;
 }
 #createForm textarea{ 
   box-sizing: border-box;
   padding: 1em;
-  border: 0;
+  border: 0; 
+  font-family: aller,sans-serif;
+  font-weight: 400;  
+  font-style: normal;
   font-size: 1.5em;
   resize: none;
   width: 80%;
-  border-radius: 0 10px 10px 10px;
+  border-radius: 1rem;
 }
 #createForm #submitArea{
   flex-grow:1 ;
@@ -95,26 +102,28 @@ section#create{
 }
 
 #createForm #submitArea label{
-  color:#a77120;
-  font-size: 0.8em;
+  color: #985b00;
+  font-size: 1rem;
   margin-bottom: auto;
   max-width: 10em;
 }
 
-#createForm #submitArea button{ 
-   
+#createForm #submitArea #submitButton{  
   cursor: pointer;
-    border-radius: 10px;
-    font-weight: 900; 
-    letter-spacing: 0.25em;
-    color: #fff;
-    background: #000;
-    border: none; 
-    padding: 0 1em;
-    height: 4em;  
+  border-radius: 10px;
+   font-family: aller-display,sans-serif;
+font-weight: 400;
+font-style: normal;
+  font-size:1rem;
+  letter-spacing: 0.25em;
+  color: #fff;
+  background: #000;
+  border: none; 
+  padding: 0 1em;
+  height: 4em;  
 }
-
-
+ 
+/* refresh Button */
 #refreshButton{ 
   position: absolute;
   bottom: 0;
@@ -122,8 +131,7 @@ section#create{
   background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0.7) 73%);
   border: none;
   display: none;
-}
-
+} 
 
 #refreshButton svg{
   width: 3rem;
@@ -131,4 +139,19 @@ section#create{
 }
 #refreshButton:hover svg{ 
   fill: #F9A11B;
+} 
+
+/* Google Maps Infowindow CSS */ 
+/* Increase font size in infowindows */
+.gm-style-iw-d {
+  font-size: 1.2rem;
 }
+
+/* Make the infowindow close button a little bigger */
+.gm-style-iw-c button {
+  transform: scale(1.5); 
+  top: 0 !important;
+  right: 0 !important;
+}
+
+ 
